	entry has the hash generated by OpenSSL 1.0.0 and later.
	(twittering-delete-ca-cert): delete multiple files for each
	certificate.
	(twittering-ensure-ca-cert): generate two files for each
	certificate, where their names are the hash by the older algorithm
	used by OpenSSL before 1.0.0 and the other hash by the newer
	algorithm used by OpenSSL 1.0.0 and later.

2011-07-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the API call for `user_timeline' in
	order to prevent Twitter from confusing a username consisting of
	digits with a user id. Thanks to Makoto Fujiwara who reported this
	problem.
	(twittering-call-api): fix the API call for `user_timeline'. The
	new implementation gives a username as a query parameter. This
	prevents Twitter from confusing a username consisting of digits
	with a user id.

	* twittering-mode.el: Fix a bug that moves the cursor by calling
	`twittering-update-status-interactive' from buffers which are not
	managed by `twittering-mode'. Thanks to mofigan who reported this
	problem.
	(twittering-ensure-whole-of-status-is-visible): do not change
	window configuration unless the given window is bound to a buffer
	managed by `twittering-mode'.

2011-07-20  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix indentation of the function
	`twittering-verify-credentials'.
	(twittering-verify-credentials): fix indentation.

	* twittering-mode.el: Display exit status of the process for
	authorization if it exited abnormally.
	(twittering-http-get-verify-credentials-clean-up-sentinel):
	display exit status of the process if it exited abnormally.

	* twittering-mode.el: Embed another root CA certificate to follow
	an update of the server. Now, the server certificate for
	`api.twitter.com' is updated and it cannot be verified by the
	already embedded certificate `Equifax Secure Certificate
	Authority'. So, a root CA certificate `VeriSign Class 3 Public